--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "public": "pnpm run build && npm publish",
+    "publish": "pnpm run build && npm publish",
     "build": "rimraf dist && tsc"
   },
   "keywords": [
