--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "publish": "pnpm run build && npm publish",
-    "build": "rimraf dist && tsc"
+    "test": "tsx tests/index.ts",
+    "build": "rimraf dist && tsc",
+    "publish": "pnpm run build && npm publish"
   },
   "keywords": [
     "crosscode",
@@ -17,7 +18,9 @@
   "license": "BSD-3-Clause",
   "repository": "github:redstonekasi/cc-textparser",
   "devDependencies": {
+    "manten": "^0.5.0",
     "rimraf": "^3.0.2",
+    "tsx": "^3.11.0",
     "typescript": "^4.8.4"
   }
 }
