--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "cc-textparser",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "A reimplementation of CrossCode's text parser",
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
     "test": "tsx tests/index.ts",
     "build": "rimraf dist && tsc",
-    "publish": "pnpm run build && npm publish"
+    "pub": "pnpm run build && npm publish"
   },
   "keywords": [
     "crosscode",
